--- a/ipynotebooks/Untitled11.ipynb
+++ b/ipynotebooks/Untitled11.ipynb
@@ -11,6 +11,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Downlad the toy example data <a href=\"https://github.com/mattijn/pynotebook/blob/master/idata/yeah.zip\">here</a>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "Load some modules"
      ]
     },
@@ -47,11 +54,104 @@
       "tree = KDTree(df.ix[:,3:5], leafsize=11)\n",
       "outarr = np.empty(dem.shape)\n",
       "\n",
-      "#print (dem, xy, df)"
+      "print ('xy values\\n',xy)\n",
+      "print ('z values\\n',dem)\n",
+      "df.head()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "xy values\n",
+        " [[ 5050000.  2550000.]\n",
+        " [ 5150000.  2600000.]\n",
+        " [ 5250000.  2650000.]\n",
+        " [ 5350000.  2700000.]\n",
+        " [ 5450000.  2750000.]\n",
+        " [ 5550000.  2800000.]\n",
+        " [ 5650000.  2850000.]\n",
+        " [ 5750000.  2900000.]\n",
+        " [ 5850000.  2950000.]\n",
+        " [ 5950000.  3000000.]]\n",
+        "z values\n",
+        " [-455. -490. -466. -532. -436. -275. -937. -290. -396. -459.]\n"
+       ]
+      },
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>Station</th>\n",
+        "      <th>TEMP</th>\n",
+        "      <th>Elev</th>\n",
+        "      <th>POINT_X</th>\n",
+        "      <th>POINT_Y</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>0</th>\n",
+        "      <td> 50136</td>\n",
+        "      <td>-1045.000000</td>\n",
+        "      <td> 433.0</td>\n",
+        "      <td> 5473928.503</td>\n",
+        "      <td> 3209653.795</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>1</th>\n",
+        "      <td> 50246</td>\n",
+        "      <td> -940.416667</td>\n",
+        "      <td> 361.9</td>\n",
+        "      <td> 5621191.187</td>\n",
+        "      <td> 3199563.174</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2</th>\n",
+        "      <td> 50349</td>\n",
+        "      <td>-1003.750000</td>\n",
+        "      <td> 494.6</td>\n",
+        "      <td> 5626513.511</td>\n",
+        "      <td> 3108424.145</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3</th>\n",
+        "      <td> 50353</td>\n",
+        "      <td> -863.333333</td>\n",
+        "      <td> 177.4</td>\n",
+        "      <td> 5770514.642</td>\n",
+        "      <td> 3144551.515</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>4</th>\n",
+        "      <td> 50425</td>\n",
+        "      <td> -441.250000</td>\n",
+        "      <td> 581.4</td>\n",
+        "      <td> 5382630.523</td>\n",
+        "      <td> 2908127.877</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "   Station         TEMP   Elev      POINT_X      POINT_Y\n",
+        "0    50136 -1045.000000  433.0  5473928.503  3209653.795\n",
+        "1    50246  -940.416667  361.9  5621191.187  3199563.174\n",
+        "2    50349 -1003.750000  494.6  5626513.511  3108424.145\n",
+        "3    50353  -863.333333  177.4  5770514.642  3144551.515\n",
+        "4    50425  -441.250000  581.4  5382630.523  2908127.877"
+       ]
+      }
+     ],
      "prompt_number": 2
     },
     {
