--- a/ipynotebooks/Untitled11.ipynb
+++ b/ipynotebooks/Untitled11.ipynb
@@ -169,6 +169,13 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "\\begin{equation*}DV_p =  \\sum_{i=1}^n (1/d_i)^2)^{-1} * \\sum_{i=1}^n((DV_i + b_1(Long_p - Long_i)+b_2(Lat_p-Lat_i)+b_3(h_p-h_i)) *(1/d_i)^2)\\end{equation*}"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
