--- a/ipynotebooks/raadsel.ipynb
+++ b/ipynotebooks/raadsel.ipynb
@@ -8,6 +8,14 @@
   {
    "cells": [
     {
+     "cell_type": "heading",
+     "level": 4,
+     "metadata": {},
+     "source": [
+      "Toegepast raadsel, er zijn nu 20 miljoen meer Chinese jongens dan meisjes. Zal het volgende het probleem kunnen oplossen? Elke familie mag zoveel kinderen hebben als ze willen maar ze mogen maar \u00e9\u00e9n jongen hebben. Dus zolang ze alleen meisjes krijgen mogen ze meer kinderen, maar krijgen ze een jongetje dan moeten ze stoppen."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -98,7 +106,7 @@
      "level": 4,
      "metadata": {},
      "source": [
-      "Nog even een overzicht van het verloop van de kans op een jongen of een meisje naarmate meer families kinderen krijgen en zich netjes aan onze regels houden"
+      "Nog even een overzicht van het verloop van de kans op een jongen of een meisje naarmate het aantal families welke kinderen neemt zich netjes aan onze regels houden"
      ]
     },
     {
