--- a/ipynotebooks/Test MeukerijAAA.ipynb
+++ b/ipynotebooks/Test MeukerijAAA.ipynb
@@ -1025,7 +1025,8 @@
      "prompt_number": 22
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "heading",
+     "level": 1,
      "metadata": {},
      "source": [
       "Now apply Butterworth filter as a low bandpass filter to remoive the noise in the timeseries for the Land Surface Temperature time series"
