--- a/ipynotebooks/Untitled25.ipynb
+++ b/ipynotebooks/Untitled25.ipynb
@@ -11,38 +11,119 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%connect_info"
+      "from mattijn import dikkelul\n",
+      "profeet_mattijn = dikkelul.FilesFolder(r'D:\\Data\\GPCP_tif_clip_clip')"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "{\n",
-        "  \"iopub_port\": 57032, \n",
-        "  \"signature_scheme\": \"hmac-sha256\", \n",
-        "  \"ip\": \"127.0.0.1\", \n",
-        "  \"hb_port\": 57035, \n",
-        "  \"key\": \"83a9be28-c9ef-42a4-95fb-bb346105e297\", \n",
-        "  \"control_port\": 57034, \n",
-        "  \"stdin_port\": 57033, \n",
-        "  \"transport\": \"tcp\", \n",
-        "  \"shell_port\": 57031\n",
-        "}\n",
-        "\n",
-        "Paste the above JSON into a file, and connect with:\n",
-        "    $> ipython <app> --existing <file>\n",
-        "or, if you are local, you can connect with just:\n",
-        "    $> ipython <app> --existing kernel-8e7c625d-a69e-4120-ba55-144923c75b2b.json \n",
-        "or even just:\n",
-        "    $> ipython <app> --existing \n",
-        "if this is the most recent IPython session you have started.\n"
-       ]
-      }
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from osgeo import gdal, osr"
      ],
-     "prompt_number": 1
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = profeet_mattijn[0]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ds, array, gt = dikkelul.OpenRaster(profeet_mattijn[0])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for i in range(len(profeet_mattijn)):\n",
+      "    print (i, profeet_mattijn[i])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "len(profeet_mattijn)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for i in range(10,len(profeet_mattijn),10):\n",
+      "    start = i-10    \n",
+      "    print(\"test\")\n",
+      "    for j in range(start,i,1):\n",
+      "        print (j)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ds = gdal.Open(profeet_mattijn[0])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "array = ds.ReadAsArray()\n",
+      "base = np.empty_like(array)\n",
+      "base.shape"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "band = ds.GetRasterBand(1)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "array = band.ReadAsArray()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
