4 days after spring festival, new updates
M'n github groeit, hoe ga ik dit organiseren

--- a/ipynotebooks/NDVI NVAI/anomaly ndvi.ipynb
+++ b/ipynotebooks/NDVI NVAI/anomaly ndvi.ipynb
@@ -68,7 +68,43 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "path = r'D:\\Data\\NDVIanomalytimeseries'\n",
+      "test = listall(path)\n",
+      "print (len(test))\n",
+      "print (test[0])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "460\n",
+        "D:\\Data\\NDVIanomalytimeseries\\abs_NDVI_2001001.tif\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import shutil\n",
+      "for i in test:\n",
+      "    shutil.copy(i, r'D:\\Data\\NDVI')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
