--- a/ipynotebooks/Python2.7/SubPlotsGPCP Normalised Anomaly Type II.ipynb
+++ b/ipynotebooks/Python2.7/SubPlotsGPCP Normalised Anomaly Type II.ipynb
@@ -123,14 +123,15 @@
       "\n",
       "#bounds =  [-5., -3.5, -2.5, -1.83, -1.17, -0.5, 0.5, 1.17, 1.83, 2.5, 3.5, 5.]\n",
       "#bounds =  [-8., -6.5, -5.5, -4.83, -4.17, -3.5, -2.5, -1.83, -1.17, -0.5, 0.5, 2.]\n",
-      "bounds = [-1., -.8,  -.6,  -.4,   -.20, -.05,  .05,    .2,   .4,   .6, .8, 1.]    \n",
+      "#bounds = [-1., -.8,  -.6,  -.4,   -.20, -.05,  .05,    .2,   .4,   .6, .8, 1.]    \n",
+      "bounds = [-4., -3.,  -2.,  -1.5,   -1., -.5,  .5,    1.,   1.5,   2., 3., 4.]\n",
       "#bounds = [-.3, -.25,  -.2,  -.15,   -.1, -.05,  .05,    .1,   .15,   .2, .25, .3]    # OLD\n",
       "norm = cm.colors.BoundaryNorm(bounds, cmap.N)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -143,7 +144,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "RasterFolder = r'D:\\Data\\GPCP_30acc_anomalyNorm'\n",
+      "RasterFolder = r'D:\\Data\\GPCP_30acc_anomalyNormTypeII'\n",
       "raster = listall(RasterFolder)\n",
       "rasterBase = raster[0]\n",
       "extent, xy_source, proj = setMap(rasterBase)\n",
@@ -155,13 +156,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 21,
+       "prompt_number": 9,
        "text": [
         "[-179.875, 180.125, 89.875, -90.125]"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -195,7 +196,7 @@
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -218,11 +219,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "('D:\\\\Data\\\\GPCP_30acc_anomalyNorm\\\\GPCP_2000001.tif', 'D:\\\\Data\\\\GPCP_30acc_anomalyNorm\\\\GPCP_2001001.tif')\n"
+        "('D:\\\\Data\\\\GPCP_30acc_anomalyNormTypeII\\\\GPCP_2000001.tif', 'D:\\\\Data\\\\GPCP_30acc_anomalyNormTypeII\\\\GPCP_2001001.tif')\n"
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -403,7 +404,7 @@
       "    plt.suptitle(title, y=0.98, fontsize=22)    \n",
       "    \n",
       "    cax = fig.add_axes([0.15, 0.05, 0.7, 0.03]) # location of the legend\n",
-      "    cb = fig.colorbar(im, cax=cax, ticks=[-1]+bounds+[1], norm=norm, extend='both', extendfrac='auto', orientation='horizontal').set_label('NDVI Difference')\n",
+      "    cb = fig.colorbar(im, cax=cax, ticks=[-1]+bounds+[1], norm=norm, extend='both', extendfrac='auto', orientation='horizontal').set_label('Precipitation Difference')\n",
       "\n",
       "    plt.subplots_adjust(left=None, bottom=None, right=None, top=None, wspace=None, hspace=None)\n",
       "    \n",
@@ -416,7 +417,7 @@
       "\n",
       "\n",
       "    #plt.tight_layout()\n",
-      "    outPath = r'D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_'+g[-11:-4]+'.png' # [-15:-4] original\n",
+      "    outPath = r'D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_'+g[-11:-4]+'.png' # [-15:-4] original\n",
       "    print outPath\n",
       "    #fig.savefig(outPath, dpi=200)\n",
       "    plt.savefig(outPath, dpi=200)\n",
@@ -433,8 +434,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013001.png\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013009.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012001.png\n",
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012009.png"
        ]
       },
       {
@@ -442,7 +443,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013017.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012017.png"
        ]
       },
       {
@@ -450,7 +451,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013025.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012025.png"
        ]
       },
       {
@@ -458,7 +459,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013033.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012033.png"
        ]
       },
       {
@@ -466,7 +467,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013041.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012041.png"
        ]
       },
       {
@@ -474,7 +475,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013049.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012049.png"
        ]
       },
       {
@@ -482,7 +483,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013057.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012057.png"
        ]
       },
       {
@@ -490,7 +491,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013065.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012065.png"
        ]
       },
       {
@@ -498,7 +499,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013073.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012073.png"
        ]
       },
       {
@@ -506,7 +507,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013081.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012081.png"
        ]
       },
       {
@@ -514,7 +515,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013089.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012089.png"
        ]
       },
       {
@@ -522,7 +523,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013097.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012097.png"
        ]
       },
       {
@@ -530,7 +531,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013105.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012105.png"
        ]
       },
       {
@@ -538,7 +539,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013113.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012113.png"
        ]
       },
       {
@@ -546,7 +547,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013121.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012121.png"
        ]
       },
       {
@@ -554,7 +555,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013129.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012129.png"
        ]
       },
       {
@@ -562,7 +563,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013137.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012137.png"
        ]
       },
       {
@@ -570,7 +571,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013145.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012145.png"
        ]
       },
       {
@@ -578,7 +579,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013153.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012153.png"
        ]
       },
       {
@@ -586,7 +587,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013161.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012161.png"
        ]
       },
       {
@@ -594,7 +595,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013169.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012169.png"
        ]
       },
       {
@@ -602,7 +603,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013177.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012177.png"
        ]
       },
       {
@@ -610,7 +611,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013185.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012185.png"
        ]
       },
       {
@@ -618,7 +619,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013193.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012193.png"
        ]
       },
       {
@@ -626,7 +627,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013201.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012201.png"
        ]
       },
       {
@@ -634,7 +635,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013209.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012209.png"
        ]
       },
       {
@@ -642,7 +643,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013217.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012217.png"
        ]
       },
       {
@@ -650,7 +651,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013225.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012225.png"
        ]
       },
       {
@@ -658,7 +659,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013233.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012233.png"
        ]
       },
       {
@@ -666,7 +667,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013241.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012241.png"
        ]
       },
       {
@@ -674,7 +675,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013249.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012249.png"
        ]
       },
       {
@@ -682,7 +683,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013257.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012257.png"
        ]
       },
       {
@@ -690,7 +691,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013265.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012265.png"
        ]
       },
       {
@@ -698,7 +699,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013273.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012273.png"
        ]
       },
       {
@@ -706,7 +707,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013281.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012281.png"
        ]
       },
       {
@@ -714,7 +715,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013289.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012289.png"
        ]
       },
       {
@@ -722,7 +723,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013297.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012297.png"
        ]
       },
       {
@@ -730,7 +731,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013305.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012305.png"
        ]
       },
       {
@@ -738,7 +739,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013313.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012313.png"
        ]
       },
       {
@@ -746,7 +747,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013321.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012321.png"
        ]
       },
       {
@@ -754,7 +755,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013329.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012329.png"
        ]
       },
       {
@@ -762,7 +763,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013337.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012337.png"
        ]
       },
       {
@@ -770,7 +771,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013345.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012345.png"
        ]
       },
       {
@@ -778,7 +779,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013353.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012353.png"
        ]
       },
       {
@@ -786,7 +787,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "D:\\Data\\GPCP_30acc_anomalyNormPNG//GPCP_2013361.png"
+        "D:\\Data\\GPCP_30acc_anomalyNormTypeIIPNG2//GPCP_2012361.png"
        ]
       },
       {
@@ -797,7 +798,7 @@
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
