--- a/ipynotebooks/Signal processing/NDVI_Precipitation_Coherence_Blog.ipynb
+++ b/ipynotebooks/Signal processing/NDVI_Precipitation_Coherence_Blog.ipynb
@@ -435,7 +435,7 @@
      "source": [
       "The **coherence** has two prominent peaks that rise abouve the confidence level of 95%. One at a frequency of 0.038 cph, which is 210 * 8-days period and the second at a frequency of 0.001 cph, which correspond to a overwhelming 8192 8-days period\n",
       "\n",
-      "The **phase** of the 2 most coherent peaks are +48.6 degrees (signal 1 (SPI) leads signal 2 (SVI)) at a 8192 8-day period and +81.4 degrees at a period near 210 8-days period"
+      "The **phase** of the 2 most coherent peaks are +48.6 degrees (signal 1 (SPI) leads signal 2 (SVI)) at a 8192 8-day period and +81.4 degrees (signal 1 (SPI) leads signal 2 (SVI)) at a period near 210 8-days period"
      ]
     },
     {
@@ -451,7 +451,7 @@
      "source": [
       "Few points of consideration:\n",
       "- During testing I had some problems with the length of my time series, maybe an interval of 8 days over a period of 10 years is not enough to measure the coherence and phase?\n",
-      "- Not sure if the anomalies shown present a significant oscillation to have multiple periodic components.\n",
+      "- Not sure if the anomalies contain a significant oscillation to have multiple periodic components necesseary for the coherence calculation\n",
       "- I run into problems by converting the frequency into a 8-day period, resulting in extremely big periods. Maybe my x-axis has the wrong scale?\n",
       "- I found this difficult\n",
       "\n",
