--- a/ipynotebooks/Signal processing/NDVI_Precipitation_Coherence_Blog2.ipynb
+++ b/ipynotebooks/Signal processing/NDVI_Precipitation_Coherence_Blog2.ipynb
@@ -493,7 +493,7 @@
         "    div.text_cell_render{\n",
         "        font-family: \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
         "        line-height: 145%;\n",
-        "        font-size: 130%;\n",
+        "        font-size: 110%;\n",
         "        width:800px;\n",
         "        margin-left:auto;\n",
         "        margin-right:auto;\n",
@@ -536,13 +536,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 6,
        "text": [
-        "<IPython.core.display.HTML at 0x3a80b00>"
+        "<IPython.core.display.HTML at 0x3a9d4e0>"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 6
     }
    ],
    "metadata": {}
