--- a/ipynotebooks/Signal processing/NDVI_Precipitation_Coherence_Blog2.ipynb
+++ b/ipynotebooks/Signal processing/NDVI_Precipitation_Coherence_Blog2.ipynb
@@ -494,7 +494,7 @@
         "        font-family: \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
         "        line-height: 145%;\n",
         "        font-size: 110%;\n",
-        "        width:800px;\n",
+        "        width:900px;\n",
         "        margin-left:auto;\n",
         "        margin-right:auto;\n",
         "    }\n",
@@ -536,13 +536,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 7,
        "text": [
-        "<IPython.core.display.HTML at 0x3a9d4e0>"
+        "<IPython.core.display.HTML at 0x3a9d5f8>"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 7
     }
    ],
    "metadata": {}
