--- a/ipynotebooks/Signal processing/Test MeukerijAAA.ipynb
+++ b/ipynotebooks/Signal processing/Test MeukerijAAA.ipynb
@@ -280,11 +280,14 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def SMfiles(inGSODFolder):\n",
+      "def FilesFolder(inGSODFolder, format_end=''):\n",
+      "    \"\"\"\n",
+      "    All files within one folder\n",
+      "    \"\"\"\n",
       "    st_wmo = [os.path.join(root, name)\n",
       "               for root, dirs, files in os.walk(inGSODFolder)\n",
       "                 for name in files                 \n",
-      "                 if name.endswith('.tif')]\n",
+      "                 if name.endswith(format_end)]\n",
       "    return st_wmo"
      ],
      "language": "python",
@@ -296,13 +299,16 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def listall(RootFolder):\n",
+      "def FilesFolder2(RootFolder):\n",
+      "    \"\"\"\n",
+      "    All files within all subfolders\n",
+      "    \"\"\"\n",
       "    lists = [os.path.join(root, name)    \n",
       "                 for root, dirs, files in os.walk(RootFolder)\n",
       "                   for name in files\n",
       "                   if 'LST' in name\n",
       "                     if name.endswith('.tif')]\n",
-      "    return lists\n"
+      "    return lists"
      ],
      "language": "python",
      "metadata": {},
@@ -317,7 +323,7 @@
       "da = []\n",
       "i = 0\n",
       "path = r'D:\\Data\\DataTimeSeries'\n",
-      "test = listall(path)\n",
+      "test = FilesFolder(path)\n",
       "print len(test)\n",
       "print test[0]\n",
       "for t in test:    \n",
