--- a/ipynotebooks/rebin_resample_gdal_translate (2).ipynb
+++ b/ipynotebooks/rebin_resample_gdal_translate (2).ipynb
@@ -11,6 +11,60 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "from mattijn import dikkelul\n",
+      "from osgeo import gdal, ogr"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ogr.OLCFastGetExtent(pth)\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "TypeError",
+       "evalue": "'str' object is not callable",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-19-30d2a475068a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mogr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mOLCFastGetExtent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpth\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mTypeError\u001b[0m: 'str' object is not callable"
+       ]
+      }
+     ],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pth"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 18,
+       "text": [
+        "'D:\\\\Data\\\\ChinaShapefile//Jiujang.shp'"
+       ]
+      }
+     ],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "def saveRaster(path, array, dsSource, datatype=3, formatraster=\"GTiff\"): \n",
       "    \"\"\"\n",
       "    Datatypes:\n",
@@ -75,7 +129,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 185
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
