--- a/ipynotebooks/Python2.7/Coordinate Grid.ipynb
+++ b/ipynotebooks/Python2.7/Coordinate Grid.ipynb
@@ -132,14 +132,22 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "pin = r'D:\\Data\\0_DAILY_INTERVAL_NDVI_TRMM\\InnerMongolia\\NDVI\\RAW//NDVI_IM_2003001.tif'\n",
-      "pout = r'D:\\Data\\0_DAILY_INTERVAL_NDVI_TRMM\\InnerMongolia//GRID_IM_NDVI_1KM.tif'\n",
+      "pin = r'D:\\Data\\0_DAILY_INTERVAL_NDVI_TRMM\\InnerMongolia\\2009\\TRMM_10_DaySums_StdNormAnomalyRes_SummerOnly\\0//0_TRMM_IM_2009091.TIF'\n",
+      "pout = r'D:\\Data\\0_DAILY_INTERVAL_NDVI_TRMM\\InnerMongolia//GRID_0_TRMM_IM_2009091.tif'\n",
       "createCoordGrid(pin,pout)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "-c:21: RuntimeWarning: divide by zero encountered in log10\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
