nog maar weeer iets

--- a/ipynotebooks/Python2.7/2014-06-24 Calculate soilmoisture retention capacity.ipynb
+++ b/ipynotebooks/Python2.7/2014-06-24 Calculate soilmoisture retention capacity.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:63642bc7469d4d34854186d276e400fd44826d1d487e04670c5b2281e6cdd2fd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -111,7 +112,7 @@
       "path1500 = r'G:\\New folder\\AWC_CLASS2\\sm_retention//1500china_res.tif'\n",
       "path33 = r'G:\\New folder\\AWC_CLASS2\\sm_retention//33china_res.tif'\n",
       "ds1500 = gdal.Open(path1500)\n",
-      "ds33 = gdal.Open(path33)\n"
+      "ds33 = gdal.Open(path33)"
      ],
      "language": "python",
      "metadata": {},
