--- a/ipynotebooks/Python2.7/2014-09-01 - Time series TRMM.ipynb
+++ b/ipynotebooks/Python2.7/2014-09-01 - Time series TRMM.ipynb
@@ -50,7 +50,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -82,7 +82,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "365\n",
+        "D:\\Data\\0_DAILY_INTERVAL_NDVI_TRMM\\InnerMongolia\\TRMM2\\150_Day_Period\\150_DaySums\\TRMM_IM_2009001.tif\n",
+        "D:\\Data\\0_DAILY_INTERVAL_NDVI_TRMM\\InnerMongolia\\TRMM2\\150_Day_Period\\150_DaySums\\TRMM_IM_2009365.tif\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -155,12 +166,25 @@
       "leg = plt.legend([p1,p3],['precipitation','precipitation mean'],ncol=1, loc=2)\n",
       "leg.get_frame().set_linewidth(0.5)\n",
       "leg.get_frame().set_edgecolor('lightgray')\n",
-      "plt.tight_layout()        \n",
-      "plt.savefig(r'C:\\Users\\lenovo\\Documents\\HOME\\Figures AJ\\precipitation//150daysum_precip.png', dpi=400)"
+      "plt.tight_layout()  \n",
+      "plt.show()\n",
+      "#plt.savefig(r'C:\\Users\\lenovo\\Documents\\HOME\\Figures AJ\\precipitation//150daysum_precip.png', dpi=400)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'rows' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-4-ee24a470554d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# loop through the rows\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrowx\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrowx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0myBlockSize\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m#(0, rows, yBlockSize)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0myBlockSize\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mrows\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m         \u001b[0mnumRows\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0myBlockSize\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mNameError\u001b[0m: name 'rows' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
