--- a/ipynotebooks/Python2.7/2014-06-25 Decomposing Phase into Meris classifications.ipynb
+++ b/ipynotebooks/Python2.7/2014-06-25 Decomposing Phase into Meris classifications.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:41d6648108bb3bfaffb50012dce89f678108f117dad25888885caf2adf5dcb66"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
