--- a/ipynotebooks/Python2.7/2014-06-26 Plot Phase based on soilwater and landuse classification boxplots.ipynb
+++ b/ipynotebooks/Python2.7/2014-06-26 Plot Phase based on soilwater and landuse classification boxplots.ipynb
@@ -1128,22 +1128,23 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "output2008[0]"
+      "output2008[7]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 48,
-       "text": [
-        "array([ -0.36340332,  -2.67068481,  -2.67068481, ...,  19.3313179 ,\n",
-        "         9.77615356,  12.38400936], dtype=float32)"
+       "ename": "NameError",
+       "evalue": "name 'output2008' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-1-e5369fee28e8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0moutput2008\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mNameError\u001b[0m: name 'output2008' is not defined"
        ]
       }
      ],
-     "prompt_number": 48
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
