--- a/ipynotebooks/Python2.7/2014-10-06 Histogram land cover classes.ipynb
+++ b/ipynotebooks/Python2.7/2014-10-06 Histogram land cover classes.ipynb
@@ -12,12 +12,20 @@
      "collapsed": false,
      "input": [
       "import pandas as pd\n",
-      "import matplotlib.pyplot as plt"
+      "import matplotlib.pyplot as plt\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
      "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
