--- a/ipynotebooks/Python2.7/2016/2016-05-25 cross-spectral analysis.ipynb
+++ b/ipynotebooks/Python2.7/2016/2016-05-25 cross-spectral analysis.ipynb
@@ -8,16 +8,23 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "Author: Mattijn van Hoek\n",
-    "Supervisor: Prof Li JIA\n",
+    "# Author: Mattijn van Hoek\n",
+    "# Supervisor: Prof Li JIA\n",
     "\n",
-    "More background: \n",
-    "Van Hoek, M.; Jia, L.; Zhou, J.; Zheng, C.; Menenti, M. Early Drought Detection by Spectral Analysis of Satellite Time Series of Precipitation and Normalized Difference Vegetation  Index  (NDVI).  Remote  Sensing.  2016,  8,  422, http://dx.doi.org/10.3390/rs8050422.\n",
+    "# More background: \n",
+    "# Van Hoek, M.; Jia, L.; Zhou, J.; Zheng, C.; Menenti, M. Early Drought Detection by Spectral Analysis of Satellite Time Series\n",
+    "# of Precipitation and Normalized Difference Vegetation  Index  (NDVI).  Remote  Sensing.  2016,  8,  422, \n",
+    "# http://dx.doi.org/10.3390/rs8050422.\n",
     "\n",
-    "Van Hoek, M. (2016). Drought monitoring from space: a focus on indicators, early detection and development of a web-based integrated portal. ( Doctoral thesis), University of Chinese Academy of Sciences, Beijing. "
+    "# Van Hoek, M. (2016). Drought monitoring from space: a focus on indicators, early detection and development of a web-based \n",
+    "# integrated portal. ( Doctoral thesis), University of Chinese Academy of Sciences, Beijing. "
    ]
   },
   {
@@ -277,7 +284,7 @@
     "\n",
     "where $\\mathrm{img}{\\hat{f}}^{MT}_{ij}(\\omega )$ is the imaginary part of the CSD and $\\left.\\mathrm{real}{\\hat{f}}^{MT}_{ij}(\\omega \\right)$ is the real part of the CSD. The time lag ${\\varphi }_{ij}\\left(t\\right)$ is expressed in units of days and obtained from the phase spectrum as: \n",
     "\n",
-    "$${\\varphi }_{ij}\\left(t\\right)={{\\varphi }_{ij}(\\omega )}/{\\left(2\\pi \\bullet \\omega \\right)}$$\n",
+    "$${\\varphi }_{ij}\\left(t\\right)={{\\varphi }_{ij}(\\omega )}/{\\left(2\\pi  \\omega \\right)}$$\n",
     "\n",
     "where ${\\varphi }_{ij}(\\omega )$ is the phase in radian and $\\omega $ is the radian frequency."
    ]
@@ -565,7 +572,7 @@
    "source": [
     "The uncertainty of the phase-spectrum is estimated by applying a Monte-Carlo simulation. This method adopts a repeated semi-random sampling to obtain the distribution of the phase spectrum. The semi-random time series of $i$ and $j$ are created as follows:\n",
     "\n",
-    "$$i_{\\mathrm{rand}}\\left(t\\right)=I\\left(\\omega \\right)e^{+\\omega t},$$$$j_{\\mathrm{rand}}(t)=\\left(J\\left(\\omega \\right)\\bullet \\sqrt{1-{{\\hat{C}oh}_{ij}\\left(\\omega \\right)}^2}\\right)e^{+\\omega t}+J\\left(\\omega \\right)e^{+\\omega t}$$\n",
+    "$$i_{\\mathrm{rand}}\\left(t\\right)=I\\left(\\omega \\right)e^{+\\omega t},$$$$j_{\\mathrm{rand}}(t)=\\left(J\\left(\\omega \\right) \\sqrt{1-{{\\hat{C}oh}_{ij}\\left(\\omega \\right)}^2}\\right)e^{+\\omega t}+J\\left(\\omega \\right)e^{+\\omega t}$$\n",
     "\n",
     "where $I\\left(\\omega \\right)$ and $J\\left(\\omega \\right)$ are the Fourier transforms of the random realizations of the time series divided by the absolute sum of the norm of each realization (as in $I\\left(\\omega \\right)=i_ne^{-\\omega t}$; $I\\left(\\omega \\right)={I(\\omega )}/{\\sum{\\left|I(\\omega )\\right|}})$, and $e^{+\\omega t}$ represent the inverse Fourier transform. Using these semi-random time series, the phase-spectrum is estimated for 100 Monte Carlo simulations and the phase values are estimated at the 95% confidence level."
    ]
